# esp32-standalone-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions_example.csv  sdkconfig.defaults  secure_boot_signing_key.pem  secure_boot_signing_key_rsa.pem
.github/workflows/: ci.yml
main/: CMakeLists.txt  idf_component.yml
memfault-platform/: CMakeLists.txt
